@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
   <head>
-    <title>Ganymede UNIX Installation Guide Release 0.99.1 - 27 May 1999</title>
+    <title>Ganymede UNIX Installation Guide Release 0.99.2 - 18 June 1999</title>
   </head>
 
   <body BGCOLOR="#FFFFFF">
 
 <IMG SRC="gifs/ganymede_title.gif" HEIGHT=200 WIDTH=560 alt = "Ganymede">
-<h1><FONT FACE="Arial, Helvetica">Ganymede UNIX Installation Guide Release 0.99.1 - 27 May 1999</FONT></h1>
+<h1><FONT FACE="Arial, Helvetica">Ganymede UNIX Installation Guide Release 0.99.2 - 18 June 1999</FONT></h1>
 <hr>
 
 <p>Installing Ganymede breaks down into five steps:</p>
@@ -342,7 +342,7 @@
     <address><a href="mailto:broccol@csdsun1.arlut.utexas.edu">Jonathan Abbey</a></address>
     <!-- Created: Thu May 27 16:58:48 CDT 1999 -->
     <!-- hhmts start -->
-Last modified: Thu May 27 21:36:02 CDT 1999
+Last modified: Fri Jun 18 23:08:38 CDT 1999
 <!-- hhmts end -->
   </body>
 </html>
